# laytix

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
examples/: laytix.yaml
src/laytix/: __init__.py  adb.py  cli.py  compare.py  config.py  models.py  report.py  web.py
tests/: test_cli.py  test_compare.py  test_config.py  test_report.py  test_web.py
