[project]
name = "laytix"
version = "0.1.0"
description = "Lightweight visual UI testing for Android apps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.0",
    "scikit-image>=0.22.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[project.scripts]
laytix = "laytix.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
